--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<!--hero start-->
   <div class="hero-image">
     <i class="fa-brands fa-github"></i>
     <i class="fa-brands fa-linkedin"></i>
@@ -20,11 +20,14 @@
       <button>Contact me</button>
     </div>
   </div>
+  <!--hero end-->
+  <!--about start-->
 <div class="about">
   <h2>About Me</h2>
   <p>I'm a Front End Developer from Nottingham, UK. I have experience in responsive CSS, Javascript and React and have just finished a bootcamp with Purplebeard. I have a masters in Animation from Nottingham Trent University but my passion is coding!</p>
 </div>
-
+<!--about end-->
+<!--portfolio section start-->
 <div class="container">
     <div class="heading">
       <h2>Portfolio</h2>
@@ -74,7 +77,52 @@
       <i id ="github2" class="fa-brands fa-github"></i>
   </div>
 </div>
+<div class="get-in-touch">
+<h2>Get in touch</h2></br>
+<p>I would love to collaborate on some coding projects and I am currently looking for a full-time job so please get in touch!</p>
+</br>
+<i id="icon1" class="fa-brands fa-linkedin"></i><p>Matt Pearson</p>
+<i id="icon2" class="fa-brands fa-github"></i><p>ActuallyFBI</p>
+</div>
+<div class="message">
+  <h2>Send a message</h2>
+  <form action="form-page" method="post">
+    <fieldset>
+    <ul>
+      <li>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="user_name" />
+      </li>
+      <li>
+        <label for="mail">E-mail:</label>
+        <input type="email" id="mail" name="user_email" />
+      </li>
+  <li>
+    <label for="msg">Message:</label>
+    <textarea id="msg" name="user_message"></textarea>
+  </li>
+  <li>
+  <label for="terms-and-conditions" name="terms-and-conditions">
+    <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" class="inline" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+  </label>
+</li>
+<li class="button">
+  <button type="submit" value="submit">Submit</button>
+</li>
+</ul>
+</form>
+</fieldset>
+</div>
     </div>
   </div>
+
+</div>
+  <!--portfolio section end-->
+  <!-- get in touch start-->
+
+  <!-- get in touch end-->
+
+  <!-- start-->
+  <!-- end-->
 </body>
 </html>
