--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
 <!--hero start-->
   <div class="hero-image">
-    <i class="fa-brands fa-github"></i>
-    <i class="fa-brands fa-linkedin"></i>
+    <a href="https://github.com/ActuallyFBI" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
+    <a href="https://www.linkedin.com/in/mattpear/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
     <div class="hero-text">
-      <h1><span class="span--1">/*Hello*/</span></br><span class="span--5">.I'm</span> <span class="span--2">{</span></br><span class="span--3">Matt-hew</span>: <span class="span--4">Pearson</span><span class="span--6">px</span>;</br><span class="span--2">}</span></h1>
+      <h1><span class="span--1">/*Hello*/</span></br><span class="span--5">.I'm</span> <span class="span--2">{</span></br><span class="span--3">Matthew</span>: <span class="span--4">Pearson</span>;</br><span class="span--2">}</span></h1>
       <!--<p>And I'm a Front-End Developer from Nottingham</p>-->
     </br>
-      <button>Contact me</button>
+      <button type="submit" value="submit">Contact me</button>
     </div>
   </div>
   <!--hero end-->
   <!--about start-->
 <div class="about" id="about">
   <h2>About Me</h2>
-  <p>I'm a Front End Developer from Nottingham, UK. I have experience in responsive CSS, Javascript and React and have just finished a bootcamp with Purplebeard. I have a masters in Animation from Nottingham Trent University but my passion is coding!</p>
+  <p>I'm a Front End Developer from Nottingham, UK. I have experience in responsive CSS, Javascript and React and have just finished a bootcamp with Purplebeard. I have a masters in Animation from Nottingham Trent University but in November 2022 I began learning to code and i found that i really enjoy it and would quite like to do this for a living actually.</p>
 </div>
 <!--about end-->
 <!--portfolio section start-->
@@ -42,7 +42,7 @@
           Technologies: CSS </br>
           Summary: A Parallax website for a short-story
           </p>
-          <i id="github2" class="fa-brands fa-github"></i>
+          <a href="https://github.com/ActuallyFBI/Parallax" target="_blank"><i id="github2" class="fa-brands fa-github"></i></a>
         </div>
       </div>
       <div class="card">
@@ -84,10 +84,14 @@
 <h2>Get in touch</h2></br>
 <p>I would love to collaborate on some coding projects and I am currently looking for a full-time job so please get in touch!</p>
 </br>
-<i id="icon1" class="fa-brands fa-linkedin"></i>
+<div class="box">
+<a href="https://www.linkedin.com/in/mattpear/" target="_blank"><i id="icon1" class="fa-brands fa-linkedin fa-2xl"></i></a>
 <p>Matt Pearson</p>
-<i id="icon2" class="fa-brands fa-github"></i>
+</div>
+<div class="box">
+<a href="https://github.com/ActuallyFBI/" target="_blank"><i id="icon2" class="fa-brands fa-github fa-2xl"></i></a>
 <p>ActuallyFBI</p>
+</div>
 </div>
   <!-- get in touch end-->
     <!-- send a message start-->
@@ -120,6 +124,7 @@
     </div>
   </div>
 </div>
+  <!-- bottom nav start-->
   <div class="bottomnav">
     <a href="#about">About me</a>
     <a href="#portfolio">Portfolio</a>
@@ -127,5 +132,6 @@
     <a href="#message">Send a message</a>
     <p>copyright 2022</p>
   </div>
+    <!-- bottom nav end-->
 </body>
 </html>
