changed text to be more professional

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!--about start-->
 <div class="about" id="about">
   <h2>About Me</h2>
-  <p>I'm a Front End Developer from Nottingham, UK. I have experience in responsive CSS, Javascript and React and have just finished a bootcamp with Purplebeard. I have a masters in Animation from Nottingham Trent University but in November 2022 I began learning to code and i found that i really enjoy it and would quite like to do this for a living actually.</p>
+  <p>I'm a Front End Developer from Nottingham, UK. I have experience in responsive CSS, Javascript and React and have just finished a bootcamp with Purplebeard.</p>
 </div>
 <!--about end-->
 <!--portfolio section start-->
