fixing the media queries (still broken)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h3>Project 1 - Worms</h3>
           <p>
           Technologies: CSS </br>
-          Summary: A Parallax website for a short-story
+          Summary: A Parallax website for a short-story (UNFINISHED)
           </p>
           <a href="https://github.com/ActuallyFBI/Parallax" target="_blank"><i id="github2" class="fa-brands fa-github"></i></a>
         </div>
@@ -79,22 +79,20 @@
   </div>
 </div>
   <!--portfolio section end-->
-    <!-- get in touch start-->
+  <!-- get in touch start-->
 <div class="get-in-touch" id="get">
 <h2>Get in touch</h2></br>
 <p>I would love to collaborate on some coding projects and I am currently looking for a full-time job so please get in touch!</p>
 </br>
 <div class="box">
-<a href="https://www.linkedin.com/in/mattpear/" target="_blank"><i id="icon1" class="fa-brands fa-linkedin fa-2xl"></i></a>
-<p>Matt Pearson</p>
+<a href="https://www.linkedin.com/in/mattpear/" target="_blank"><i id="icon1" class="fa-brands fa-linkedin fa-2xl"></i></a>Matt Pearson
 </div>
 <div class="box">
-<a href="https://github.com/ActuallyFBI/" target="_blank"><i id="icon2" class="fa-brands fa-github fa-2xl"></i></a>
-<p>ActuallyFBI</p>
+<a href="https://github.com/ActuallyFBI/" target="_blank"><i id="icon2" class="fa-brands fa-github fa-2xl"></i></a>ActuallyFBI
 </div>
 </div>
   <!-- get in touch end-->
-    <!-- send a message start-->
+  <!-- send a message start-->
 <div class="message" id="message">
   <h2>Send a message</h2>
   <form action="form-page" method="post">
@@ -132,6 +130,6 @@
     <a href="#message">Send a message</a>
     <p>copyright 2022</p>
   </div>
-    <!-- bottom nav end-->
+  <!-- bottom nav end-->
 </body>
 </html>
